Update script reference in index.html to use multiplication.js

--- a/PWF/3-JS-Multiplication/index.html
+++ b/PWF/3-JS-Multiplication/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <script src="exoloop.js"></script>
+    <script src="multiplication.js"></script>
 </body>
 </html>
